tree-sitter-baseline/test/corpus/functions.txt
================================================================================
Simple function definition
================================================================================

fn add(a: Int) -> Int = a + 1

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (binary_expression
      (identifier)
      (literal
        (integer_literal)))))

================================================================================
Function with tuple type signature
================================================================================

fn add(a: Int, b: Int) -> Int = a + b

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier))
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (binary_expression
      (identifier)
      (identifier))))

================================================================================
Function with string interpolation
================================================================================

fn greet(name: String) -> String = "Hello, ${name}"

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (literal
      (string_literal
        (string_start)
        (string_content)
        (interpolation
          (identifier))
        (string_end)))))

================================================================================
Effectful function
================================================================================

fn fetch!(url: String) -> {Http} String = Http.get!(url)

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (effect_identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    effects: (effect_set
      (type_identifier))
    return_type: (type_identifier)
    body: (call_expression
      (field_expression
        (type_identifier)
        (effect_identifier))
      (identifier))))

================================================================================
Function with block body
================================================================================

fn process(input: String) -> String = {
  let validated = validate(input);
  transform(validated)
}

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (block
      (let_binding
        (identifier)
        (call_expression
          (identifier)
          (identifier)))
      (call_expression
        (identifier)
        (identifier)))))

================================================================================
Export function
================================================================================

export fn greet(name: String) -> String = "Hello"

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (literal
      (string_literal
        (string_start)
        (string_content)
        (string_end)))))

================================================================================
Function with @test section
================================================================================

fn add(a: Int) -> Int = a + 1

@test
test "basic" = add(1) == 2
test "zero" = add(0) == 1

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (binary_expression
      (identifier)
      (literal
        (integer_literal))))
  (test_section
    (inline_test
      (string_literal
        (string_start)
        (string_content)
        (string_end))
      (binary_expression
        (call_expression
          (identifier)
          (literal
            (integer_literal)))
        (literal
          (integer_literal))))
    (inline_test
      (string_literal
        (string_start)
        (string_content)
        (string_end))
      (binary_expression
        (call_expression
          (identifier)
          (literal
            (integer_literal)))
        (literal
          (integer_literal))))))
